<resources>
    <string name="app_name">BikeTrack</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_scan">Scan</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about">About</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Scan BLE</item>
        <item>Settings</item>
    </string-array>

    <string name="activity_title_about_us">About</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- Location service -->
    <string name="launch_activity">Launch activity</string>
    <string name="remove_location_updates">Remove location updates</string>

    <!-- Generic -->
    <string name="generic_progress_title">Please wait&#8230;</string>
    <string name="generic_yes">Yes</string>
    <string name="generic_no">No</string>
    <string name="generic_ok">OK</string>
    <string name="generic_success_title">Success</string>
    <string name="generic_error_title">Error</string>


    <!-- External Storage -->
    <string name="external_storage_not_available">External storage not available</string>
    <string name="external_storage_not_writable">External storage not writable</string>


    <!-- Export -->
    <string name="export_external_storage">External storage </string>
    <string name="export_external_storage_error"> Exported %1$d of %2$s to %3$s</string>
    <string name="export_external_storage_option">as %1$s to %2$s</string>
    <string name="export_external_storage_progress_message"> Exporting to %1$s&#8230;</string>
    <string name="export_external_storage_success">Exported %1$s to %2$s</string>

    <!-- Home Fragment -->

    <!-- Scan Fragment -->
    <string name="title_devices">Device Scan</string>
    <string name="unknown_device">Unknown device</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="menu_refresh">Refresh</string>

    <!-- Settings Fragment -->

    <!-- BLE Service -->
    <string name="error_bluetooth_not_supported">Bluetooth not supported</string>
    <string name="error_write_timeout">Timeout on write GATT characteristic</string>
    <string name="error_ack_timeout">Timeout on ack for command:</string>
    <string name="error_no_conn">No connection to BLE characteristic</string>
    <string name="error_no_service">Serial service non supported by device</string>
    <string name="ble_not_supported">BLE is not supported</string>

    <!-- Location permissions -->
    <string name="Location_dialog_title">This app needs location access</string>
    <string name="location_dialog_mes">Please grant location access so this app can detect beacons.</string>

    <string name="location_dis_title">Functionality limited</string>
    <string name="location_dis_mes">Since location access has not been granted, this app will not be able to discover beacons when in the background.</string>

    <!-- Location -->
    <string name="start_updates">START LOCATION UPDATES</string>
    <string name="stop_updates">STOP LOCATION UPDATES</string>
    <string name="get_last_location">GET LAST LOCATION</string>
    <string name="location_updated">Loc Up: %1$s</string>

    <!-- Tracks categories -->
    <string name="activity_type_cycling">cycling</string>
    <string name="activity_type_dirt_bike">dirt bike </string>
    <string name="activity_type_mountain_biking">mountain biking</string>
    <string name="activity_type_road_biking">road biking</string>
    <string name="activity_type_track_cycling">track cycling</string>

    <!-- Tracks -->
    <string name="tracks_few">%1$d tracks</string>
    <string name="tracks_many">%1$d tracks</string>
    <string name="tracks_one">1 track</string>
    <string name="tracks_other">%1$d tracks</string>
    <string name="tracks_two">2 tracks</string>
    <string name="tracks_zero">0 tracks</string>

    <string name="activity_type_running">running</string>
    <string name="activity_type_speed_walking">speed walking</string>
    <string name="activity_type_street_running">street running</string>
    <string name="activity_type_track_running">track running</string>
    <string name="activity_type_trail_running">trail running</string>
    <string name="activity_type_walking">walking</string>

    <string name="track_name_format">Track %1$d</string>

    <!-- Files -->
    <string name="files_few">%1$d files</string>
    <string name="files_many">%1$d files</string>
    <string name="files_one">1 file</string>
    <string name="files_other">%1$d files</string>
    <string name="files_two">2 files</string>
    <string name="files_zero">0 files</string>


    <!-- Preference screen -->

    <string name="preferences_category_one">Position</string>
    <string name="pos_int_title">Position update interval [s]</string>
    <string name="fast_up_title">Position fastest update interval [s]</string>

    <string name="preferences_category_two">Bike</string>

    <string name="preferences_switch_title">Switch Preference</string>
    <string name="preferences_switch_summ">Switch Summary</string>

    <string name="preferences_edittext_title">Bike name</string>
    <string name="preferences_edittext_summ">Your bike name</string>
    <string name="preferences_edittext_message">Give a name to your ride:</string>

    <string name="preferences_checkbox_title">CheckBox Preference</string>
    <string name="preferences_checkbox_summ">CheckBox Summary</string>

</resources>
