<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:preference="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <android.support.v7.preference.PreferenceCategory
        android:title="@string/preferences_category_one">

        <com.android.biketrack.ui.preferences.NumberPickerPreference
            android:defaultValue="@integer/pos_int_default_value"
            android:key="@string/prefkey_pos_int"
            android:title="@string/pos_int_title"
            preference:maxValue="@integer/pos_int_max_value"
            preference:minValue="@integer/pos_int_min_value"
            preference:wrapSelectorWheel="false"/>

        <com.android.biketrack.ui.preferences.NumberPickerPreference
            android:defaultValue="@integer/fast_up_default_value"
            android:key="@string/prefkey_fast_up"
            android:title="@string/fast_up_title"
            preference:maxValue="@integer/fast_up_max_value"
            preference:minValue="@integer/fast_up_min_value"
            preference:wrapSelectorWheel="false"/>

    </android.support.v7.preference.PreferenceCategory>

    <android.support.v7.preference.PreferenceCategory
        android:title="@string/preferences_category_two">

        <android.support.v7.preference.EditTextPreference
            android:dialogLayout="@layout/pref_dialog_edittext_fix"
            android:dialogMessage="@string/preferences_edittext_message"
            android:inputType="number"
            android:key="@string/prefkey_bike_name"
            android:summary="@string/preferences_edittext_summ"
            android:title="@string/preferences_edittext_title"/>

    </android.support.v7.preference.PreferenceCategory>

</android.support.v7.preference.PreferenceScreen>